gccida/g1/cleanup_subreg_operands
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3171:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3177:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v3 = recog_data_0.operand_loc[v1]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3180:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v1] = alter_subreg( v3); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3182:43: error: use of undeclared identifier 'recog_data_0'
else if ( ( unsigned __int16)( *( _WORD *)recog_data_0.operand[v1] - 66) <= 0xCu 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3183:47: error: use of undeclared identifier 'recog_data_0'
&& _bittest64( &v2, ( unsigned int)*( _WORD *)recog_data_0.operand[v1] - 66) ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3185:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v1] = walk_alter_subreg( v3); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3189:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( recog_data_0.n_operands > ( int)v1 ); 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3191:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_dups > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3197:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v6 = recog_data_0.dup_loc[v4]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3201:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*v6 = alter_subreg( recog_data_0.dup_loc[v4]); 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3209:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*v6 = walk_alter_subreg( recog_data_0.dup_loc[v4]); 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/final.c:3214:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( recog_data_0.n_dups > ( int)v4 ); 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cleanup_subreg_operands/src/obj/final.o] Error 1
